--- a/style.css
+++ b/style.css
@@ -93,3 +93,10 @@ body{
     margin-top: 10px;
     display: none;
 }
+.footer{
+    padding-top: 20px;
+}
+.footer-text{
+    color: aqua;
+    padding-left: 770px;
+}
